nodejs-app-config/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nodejs-helloworld
  namespace: app
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
  selector:
    app: nodejs-helloworld
    deployment: nodejs-helloworld
